fix(landing-page):landing slider alignment fixed

--- a/next-client/src/components/Landing/landing.css
+++ b/next-client/src/components/Landing/landing.css
@@ -39,17 +39,15 @@
   text-transform: capitalize;
   padding: 10px 0;
   font-size: 12px;
-  max-width:700px;
-  margin : 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
 }
-.home-intro-text p span{
+.home-intro-text p span {
   font-weight: lighter;
 }
 
 .progress-bars {
-  /* width:fit-content; */
-  /* margin-left: 10px; */
-  padding:20px 26px ;
+  padding: 20px 26px;
   z-index: 100;
 }
 .progress-bar-container {
@@ -59,15 +57,13 @@
   height: 100vh;
 }
 
-
-
 .progress-name {
   font-family: "Poppins", sans-serif;
   margin-top: 5px;
   color: #fff;
   /* font-weight: lighter; */
   text-transform: capitalize;
-  font-size: 15px;
+  font-size: 0.65rem;
 }
 .download-button {
   margin-top: 10px;
@@ -99,9 +95,6 @@
     justify-content: space-between;
   }
 
-  .progress-bars {
-    width: 12%;
-  }
   .home-intro-text h2 {
     font-size: 16vw;
   }
@@ -118,7 +111,7 @@
     object-fit: cover;
     filter: blur(2px);
   }
-  
+
   .home-container,
   .intro {
     flex-direction: column;
